# braincloud-cpp

./: .gitignore  .gitmodules  BrainCloudCpp.podspec  CMakeLists.txt  CMakePresets.json  Jenkinsfile  README.md  vcpkg-configuration.json  vcpkg.json
autobuild/: _brainCloudSetup_braincloud-cpp.command  build_android.sh  build_apple_unified.sh  build_apple_unified_new.sh  build_linux.sh  build_win.py  build_win20xx.bat  build_win_latest.bat  build_win_latest_with_unittest.bat  build_xcodetests.sh  buildtests.sh  podlint.sh  runtests.bat  runtests.sh
braincloud-cpp/: BrainCloudCpp.podspec  CMakeLists.txt  LICENSE
braincloud-cpp/include/braincloud/: AuthenticationType.h  BrainCloudAsyncMatch.h  BrainCloudBlockchain.h  BrainCloudChat.h  BrainCloudEntity.h  BrainCloudGlobalApp.h  BrainCloudGlobalEntity.h  BrainCloudGlobalStatistics.h  BrainCloudGroup.h  BrainCloudIdentity.h  BrainCloudItemCatalog.h  BrainCloudMatchmaking.h  BrainCloudMessaging.h  BrainCloudPlayerStatistics.h  BrainCloudRTT.h  BrainCloudRedemptionCode.h  BrainCloudScript.h  BrainCloudSocialLeaderboard.h  BrainCloudTime.h  BrainCloudVirtualCurrency.h  INetworkErrorCallback.h  IRelayConnectCallback.h  IRewardCallback.h  IServerCallback.h  OperationParam.h  ServerCall.h  ServiceName.h  ServiceOperation.h  reason_codes.h
braincloud-cpp/include/braincloud/internal/: DefaultWebSocket.h  RTTComms.h  RelayComms.h  URLRequest.h  URLResponse.h
braincloud-cpp/solutions/android/: Android.mk
braincloud-cpp/solutions/mac/BrainCloudCpp.xcodeproj/: project.pbxproj
braincloud-cpp/src/: BrainCloudAppStore.cpp  BrainCloudBlockchain.cpp  BrainCloudCustomEntity.cpp  BrainCloudEvent.cpp  BrainCloudFriend.cpp  BrainCloudLobby.cpp  BrainCloudPlayerState.cpp  BrainCloudRelay.cpp  DefaultBrainCloudComms.cpp  DefaultRelayTCPSocket.cpp  DefaultRelayUDPSocket.cpp  JsonUtil.cpp  OperationParam.cpp  RelayComms.cpp  ServiceName.cpp  ServiceOperation.cpp  URLRequest.cpp
braincloud-cpp/src/android/: AndroidSaveDataHelper.cpp
braincloud-cpp/src/apple/: nsFileUploader.mm  nsURLLoader.mm
braincloud-cpp/src/nix/: cURLPinger.cpp
braincloud-cpp/src/win/: Win32TCPSocket.cpp
braincloud-cpp/tests/: CMakeLists.txt  Readme.MD
braincloud-cpp/tests/src/: TestBCAppStore.cpp  TestBCAuth.cpp  TestBCBlockchain.cpp  TestBCBlockchain.h  TestBCChat.cpp  TestBCComms.cpp  TestBCCustomEntity.cpp  TestBCEvent.cpp  TestBCFile.cpp  TestBCGlobalApp.cpp  TestBCGlobalFile.cpp  TestBCIdentity.cpp  TestBCRelayComms.cpp  TestBCSocialLeaderboard.cpp  TestFixtureBase.cpp  TestFixtureBase.h  TestResult.cpp  TestUser.cpp
include/braincloud/: AuthenticationIds.h  BrainCloudAppStore.h  BrainCloudAsyncMatch.h  BrainCloudAuthentication.h  BrainCloudBlockchain.h  BrainCloudChat.h  BrainCloudClient.h  BrainCloudCustomEntity.h  BrainCloudDataStream.h  BrainCloudEntity.h  BrainCloudEvent.h  BrainCloudFile.h  BrainCloudFriend.h  BrainCloudGamification.h  BrainCloudGlobalApp.h  BrainCloudGlobalEntity.h  BrainCloudGlobalFile.h  BrainCloudGlobalStatistics.h  BrainCloudGroup.h  BrainCloudGroupFile.h  BrainCloudIdentity.h  BrainCloudItemCatalog.h  BrainCloudLobby.h  BrainCloudMail.h  BrainCloudMatchmaking.h  BrainCloudMessaging.h  BrainCloudOneWayMatch.h  BrainCloudPlaybackStream.h  BrainCloudPlayerState.h  BrainCloudPlayerStatistics.h  BrainCloudPlayerStatisticsEvent.h  BrainCloudPresence.h  BrainCloudProfanity.h  BrainCloudPushNotification.h  BrainCloudRTT.h  BrainCloudRedemptionCode.h  BrainCloudRelay.h  BrainCloudS3Handling.h  BrainCloudScript.h  BrainCloudSocialLeaderboard.h  (+23 more)
include/braincloud/internal/: BrainCloudComms.h  DataUtilities.h  DefaultWebSocket.h  IBrainCloudComms.h  RTTComms.h  RelayComms.h  URLLoaderClient.h  URLRequest.h  URLResponse.h
lib/apple/SSKeychain/: SSKeychain.h  SSKeychain.m  SSKeychainQuery.m
lib/zlib/: zlib.lib
solutions/: README.md
solutions/mac/BrainCloudCpp.xcodeproj/: project.pbxproj
solutions/windowsDesktop_vc120/TestApp/: TestApp.vcxproj
solutions/windowsDesktop_vc120/brainCloud/: brainCloud.vcxproj
src/: AuthenticationType.cpp  BrainCloudAppStore.cpp  BrainCloudAsyncMatch.cpp  BrainCloudAuthentication.cpp  BrainCloudClient.cpp  BrainCloudComms.cpp  BrainCloudCustomEntity.cpp  BrainCloudEvent.cpp  BrainCloudFriend.cpp  BrainCloudGlobalApp.cpp  BrainCloudGroup.cpp  BrainCloudGroupFile.cpp  BrainCloudIdentity.cpp  BrainCloudLobby.cpp  BrainCloudMail.cpp  BrainCloudMessaging.cpp  BrainCloudPlaybackStream.cpp  BrainCloudPlayerState.cpp  BrainCloudPushNotification.cpp  BrainCloudRelay.cpp  BrainCloudScript.cpp  BrainCloudSocialLeaderboard.cpp  BrainCloudTournament.cpp  BrainCloudWrapper.cpp  DataUtilities.cpp  DefaultBrainCloudComms.cpp  DefaultGUID.cpp  DefaultTCPSocket.cpp  DefaultWebSocket.cpp  IBrainCloudComms.cpp  OperationParam.cpp  RTTComms.cpp  RelayComms.cpp  SaveDataHelper.cpp  ServiceName.cpp  ServiceOperation.cpp  URLRequest.cpp  URLResponse.cpp
src/android/: AndroidDevice.cpp  AndroidSaveDataHelper.cpp  com_bitheads_braincloud_AndroidBridge.cpp
src/apple/: AppleDevice.cpp  AppleSaveDataHelper.mm  AppleWebSocket.mm  SSKeychain.m  SSKeychainQuery.m  nsFileUploader.mm
src/marmalade/: IwDevice.cpp
src/nix/: cURLFileUploader.cpp  cURLLoader.cpp
src/win/: CppRestBrainCloudComms.cpp  Win32TCPSocket.cpp  WindowsDevice.cpp
tests/: CMakeLists.txt
tests/gtest-1.7.0/: CMakeLists.txt
tests/src/: TestBCAppStore.cpp  TestBCAsyncMatch.cpp  TestBCAuth.cpp  TestBCBlockchain.cpp  TestBCCompression.cpp  TestBCCompression.h  TestBCCustomEntity.cpp  TestBCEntity.cpp  TestBCEvent.cpp  TestBCFile.cpp  TestBCFriend.cpp  TestBCGlobalFile.cpp  TestBCGroup.cpp  TestBCGroup.h  TestBCGroupFile.cpp  TestBCGroupFile.h  TestBCIdentity.cpp  TestBCLobby.cpp  TestBCLobby.h  TestBCMail.cpp  TestBCMessaging.cpp  TestBCOneWayMatch.cpp  TestBCPlaybackStream.cpp  TestBCPlayerState.cpp  TestBCPushNotifications.cpp  TestBCRTTComms.cpp  TestBCRelayComms.cpp  TestBCScript.cpp  TestBCSocialLeaderboard.cpp  TestBCTournament.cpp  TestBCWrapper.cpp  TestFixtureBase.cpp  TestFixtureBase.h  TestResult.cpp  TestUser.cpp  TestUser.h
(+12 files in other folders)
